--- a/login e cadastro/style.css
+++ b/login e cadastro/style.css
@@ -1,61 +1,66 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap");
+
 body {
-	margin: 0;
-	padding: 0;
-	background: #090909;
-	font-family: Arial, sans-serif;
-	color: white;
+  margin: 0;
+  padding: 0;
+  background-image: url("./img/bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: "Poppins", sans-serif;
+  color: white;
+  margin-top: 15rem;
 }
 
 .login-form {
-	width: 400px;
-	margin: 100px auto;
-	background:#3F3F3F;
-	padding: 30px;
-	border-radius: 5px;
-	box-shadow: 0px 2px 10px rgba(69, 66, 66, 0.3);
+  width: 400px;
+  background-color: rgb(0, 0, 0, 0.5);
+  padding: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5px;
+  box-shadow: 0px 2px 10px rgba(69, 66, 66, 0.3);
 }
 
 .logo {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	margin-bottom: 30px;
-	
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
 }
 
 .logo img {
-	height: 50px;
-	margin-right: 10px;
-	border-radius: 50px;
+  height: 50px;
+  margin-right: 10px;
+  border-radius: 50px;
 }
 
 h1 {
-	margin: 0;
-	color: #FC0404;
+  margin: 0;
+  color: #e70909;
 }
 
 form {
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 input[type="text"],
 input[type="password"] {
-	margin-bottom: 20px;
-	padding: 10px;
-	border-radius: 5px;
-	border: none;
-	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-button[type="submit"]
- {
-	background:#970101;
-	color: #fff;
-	padding: 10px;
-	border: none;
-	border-radius: 5px;
-	cursor: pointer;
+button[type="submit"] {
+  font-family: "Poppins", sans-serif;
+  background: #970101;
+  color: #fff;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 /*.social-btn {
@@ -67,8 +72,7 @@ button[type="submit"]:hover,
 	background: #666;
 }*/
 
-
-a{
-color: #970101;
-font-weight: bold;
+a {
+  color: #e70909;
+  font-weight: bold;
 }
