--- a/login e cadastro/textstyle.css
+++ b/login e cadastro/textstyle.css
@@ -1,83 +1,82 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap");
+
 body {
-	margin: 0;
-	padding: 0;
-	background: #090909;
-	font-family: Arial, sans-serif;
-	color: white;
+  margin: 0;
+  padding: 0;
+  background-image: url("./img/bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: "Poppins", sans-serif;
+  color: white;
+  margin-top: 5rem;
 }
 
 .form-container {
-  
-    max-width: 500px;
-    margin: auto;
-    padding: 20px;
-    background-color: #3F3F3F;
-    box-shadow: 0px 2px 10px rgba(69, 66, 66, 0.3);
-    border-radius: 5px;
-  }
-  
-  
-  .header {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-    
-  }
-  
-  img {
-    height: 50px;
-	  margin-left: 50px;
-	  border-radius: 50px;  
-  }
-  
-  h1 {
+  max-width: 500px;
+  padding: 20px;
+  background-color: rgb(0, 0, 0, 0.5);
+  box-shadow: 0px 2px 10px rgba(69, 66, 66, 0.3);
+  border-radius: 5px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+img {
+  height: 50px;
+  margin-left: 50px;
+  border-radius: 50px;
+}
+
+h1 {
   margin: 0;
-	color: #FC0404;
+  color: #e70909;
   padding-left: 25px;
-  
-  }
-  
-  form {
+}
 
-    display: flex;
-    flex-direction: column;
-  }
-  
-  label {
-    font-weight: bold;
-    margin-top: 10px;
-  }
-  
-  input[type="file"] {
-    margin-bottom: 20px;
-  }
-  
-  input:not([type="file"]) {
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin-bottom: 10px;
-  }
-  
-  button[type="submit"] {
-    background:#970101;
-	color: #fff;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    margin-top: 10px;
-    cursor: pointer;
-  }
-  
-  p {
-    margin-top: 20px;
-    text-align: center;
-  }
+form {
+  display: flex;
+  flex-direction: column;
+}
 
-  a{
-  color: #970101;
+label {
   font-weight: bold;
-  }
-  
-  
-  
+  margin-top: 10px;
+}
+
+input[type="file"] {
+  margin-bottom: 20px;
+}
+
+input:not([type="file"]) {
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+button[type="submit"] {
+  font-family: "Poppins", sans-serif;
+  background: #970101;
+  color: #fff;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+p {
+  margin-top: 20px;
+  text-align: center;
+}
+
+a {
+  color: #e70909;
+  font-weight: bold;
+}
